build.log
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/Usuario1/.gradle/wrapper/dists/gradle-8.13-bin/5xuhj0ry160q40clulazy9h7d/gradle-8.13/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:31: error: cannot find symbol
        btnSave = findViewById(R.id.btnSave);
        ^
  symbol:   variable btnSave
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:34: error: cannot find symbol
        incidenciaDAO = new IncidenciaDAO(this);
        ^
  symbol:   variable incidenciaDAO
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:35: error: cannot find symbol
        incidenciaDAO.open();
        ^
  symbol:   variable incidenciaDAO
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:45: error: cannot find symbol
        btnSave.setOnClickListener(new View.OnClickListener() {
        ^
  symbol:   variable btnSave
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:79: error: cannot find symbol
            btnSave.setText("Actualizar");
            ^
  symbol:   variable btnSave
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:86: error: cannot find symbol
            incidenciaDAO.deleteIncidencia(incidenciaToEdit.getId());
            ^
  symbol:   variable incidenciaDAO
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:108: error: cannot find symbol
            int result = incidenciaDAO.updateIncidencia(incidenciaToEdit);
                         ^
  symbol:   variable incidenciaDAO
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:118: error: cannot find symbol
            long result = incidenciaDAO.insertIncidencia(incidencia);
                          ^
  symbol:   variable incidenciaDAO
  location: class AddIncidenciaActivity
C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:132: error: cannot find symbol
        incidenciaDAO.close();
        ^
  symbol:   variable incidenciaDAO
  location: class AddIncidenciaActivity
Note: C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors

[Incubating] Problems report is available at: file:///C:/Users/Usuario1/AndroidStudioProjects/EcoCity/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:31: error: cannot find symbol
          btnSave = findViewById(R.id.btnSave);
          ^
    symbol:   variable btnSave
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:34: error: cannot find symbol
          incidenciaDAO = new IncidenciaDAO(this);
          ^
    symbol:   variable incidenciaDAO
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:35: error: cannot find symbol
          incidenciaDAO.open();
          ^
    symbol:   variable incidenciaDAO
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:45: error: cannot find symbol
          btnSave.setOnClickListener(new View.OnClickListener() {
          ^
    symbol:   variable btnSave
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:79: error: cannot find symbol
              btnSave.setText("Actualizar");
              ^
    symbol:   variable btnSave
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:86: error: cannot find symbol
              incidenciaDAO.deleteIncidencia(incidenciaToEdit.getId());
              ^
    symbol:   variable incidenciaDAO
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:108: error: cannot find symbol
              int result = incidenciaDAO.updateIncidencia(incidenciaToEdit);
                           ^
    symbol:   variable incidenciaDAO
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:118: error: cannot find symbol
              long result = incidenciaDAO.insertIncidencia(incidencia);
                            ^
    symbol:   variable incidenciaDAO
    location: class AddIncidenciaActivity
  C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java:132: error: cannot find symbol
          incidenciaDAO.close();
          ^
    symbol:   variable incidenciaDAO
    location: class AddIncidenciaActivity
  Note: C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: C:\Users\Usuario1\AndroidStudioProjects\EcoCity\app\src\main\java\com\ecocity\app\ui\AddIncidenciaActivity.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  9 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
17 actionable tasks: 1 executed, 16 up-to-date
